feat: starting to do the post CRUD
